fix z-index issues

--- a/static/css/models.css
+++ b/static/css/models.css
@@ -33,7 +33,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
+    z-index: 500;
     transition: 0.3s;
 }
 
@@ -46,5 +46,5 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2000;
+    z-index: 600;
 }
